# OpenEnv

./: .dockerignore  .gitignore  INFERENCE_ALIGNMENT.md  README.md  WEIGHTING_GUIDE.md  baseline.py  client.py  dockerfile  inference.py  llm_agent.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  dataset.py  environment.py  grading.py  requirements.txt
